2011-01-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/terminfo.c (grub_terminfo_readkey): Handle keys with
	CTRL.

2011-01-05  Vladimir Serbinenko  <phcoder@gmail.com>

	The E820 type 5 is BADRAM, not EXEC_CODE.

	* grub-core/loader/i386/bsd.c (GRUB_E820_EXEC_CODE): Removed.
	(GRUB_E820_BADRAM): New define.
	* grub-core/loader/i386/linux.c (grub_linux_boot): Translate code
	into reserved. Propagate BADRAM.
	* grub-core/loader/i386/bsd.c (GRUB_E820_EXEC_CODE): Removed.
	(GRUB_E820_BADRAM): New define.

2011-01-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/efi/relocator.c (grub_relocator_firmware_fill_events):
	Ignore the memory post-4G.
	(grub_relocator_firmware_alloc_region): Additional debug statement.

2011-01-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/getroot.c (grub_util_get_grub_dev): Check md/%s
	names.
	Reported by: David Pravec.

2011-01-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/i386/pc/biosdisk.c (GRUB_MOD_INIT): Workaround buggy
	BIOSes.

2011-01-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (grub_reed_solomon_add_redundancy):
	Prevent overflow.
	(grub_reed_solomon_recover): Likewise.

2011-01-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (main) [TEST]: Reactivate normal test.

2011-01-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (scratch) [! STANDALONE]: Remove leftover
	variable.

2011-01-04  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/commands/legacycfg.c (GRUB_MOD_INIT): Fix typo in
	descriptions of extract_legacy_entries_source and
	extract_legacy_entries_configfile.
	Reported by: Seung Soo, Ha.

2011-01-03  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/bus/pci.c (grub_pci_iterate): Skip remaining functions
	on devices that do not implement function 0.

2011-01-03  Dave Vasilevsky <dave@vasilevsky.ca>

	* grub-core/fs/hfsplus.c: Make parent unsigned.